--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8" />
 	<title>Página não encontrada - Page not Found</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<link data-turbolinks-track="true" href="css/404.css" media="all" rel="stylesheet" />
 </head>
 
@@ -25,5 +27,14 @@
 			</div>
 		</a>
 	</div>
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-12085288-1', 'auto');
+	ga('send', 'pageview');
+	</script>
 </body>
 </html>
